passed render data changed

--- a/App/Views/login.html
+++ b/App/Views/login.html
@@ -1,4 +1,4 @@
-<?php include PATH_VIEWS . 'inc/header.php' ?>
+<?php include PATH_VIEWS . 'inc/header.html' ?>
 
 <!-- CONTENT -->
 <div class="uk-container uk-container-small uk-flex-auto uk-text-center" data-uk-scrollspy="target: > .animate; cls: uk-animation-slide-bottom-small uk-invisible; delay: 300">
@@ -16,4 +16,4 @@
 <script src="https://apis.google.com/js/api.js"></script>
 <script src="/js/videna-social.js?ver=211129"></script> <!-- ?ver=<?= rand(1, 999999) ?> -->
 
-<?php include PATH_VIEWS . 'inc/footer.php' ?>
+<?php include PATH_VIEWS . 'inc/footer.html' ?>
