--- a/App/Views/error.html
+++ b/App/Views/error.html
@@ -1,4 +1,4 @@
-<?php include PATH_VIEWS . 'inc/header.php' ?>
+<?php include PATH_VIEWS . 'inc/header.html' ?>
 
 <!-- CONTENT -->
 <div class="uk-container uk-container-small uk-flex-auto uk-text-center" data-uk-scrollspy="target: > .animate; cls: uk-animation-slide-bottom-small uk-invisible; delay: 300">
@@ -12,4 +12,4 @@
 </div>
 <!-- /CONTENT -->
 
-<?php include PATH_VIEWS . 'inc/footer.php' ?>
+<?php include PATH_VIEWS . 'inc/footer.html' ?>
