--- a/App/Views/inc/header.html
+++ b/App/Views/inc/header.html
@@ -17,18 +17,9 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 
-    <!-- CSS FILES -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/uikit@latest/dist/css/uikit.min.css">
-    <style>
-        .lead {
-            font-size: 1.175em;
-            font-weight: 300;
-        }
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="/css/app.css">
 
-        .uk-logo img {
-            height: 28px;
-        }
-    </style>
 </head>
 
 <body>
