--- a/App/Views/admin/dashboard.html
+++ b/App/Views/admin/dashboard.html
@@ -55,10 +55,12 @@
                                     <li><a href="#"><span data-uk-icon="icon: info"></span> Summary</a></li>
                                     <li><a href="#"><span data-uk-icon="icon: refresh"></span> Edit</a></li>
                                     <li><a href="#"><span data-uk-icon="icon: settings"></span> Configuration</a></li>
+                                    <?php if ($user->account < USR_ADMIN) : ?>
                                     <li class="uk-nav-divider"></li>
-                                    <li><a href="#"><span data-uk-icon="icon: image"></span> Your Data</a></li>
+                                    <li><a href="javascript:deleteAccount();"><span data-uk-icon="icon: warning"></span> Delete Account</a></li>
+                                    <?php endif; ?>
                                     <li class="uk-nav-divider"></li>
-                                    <li><a href="#"><span data-uk-icon="icon: sign-out"></span> Logout</a></li>
+                                    <li><a href="/logout"><span data-uk-icon="icon: sign-out"></span> Logout</a></li>
                                 </ul>
                             </div>
                         </li>
@@ -74,7 +76,7 @@
                     <ul class="uk-navbar-nav">
                         <li><a href="#" data-uk-icon="icon:user" title="Your profile" data-uk-tooltip></a></li>
                         <li><a href="#" data-uk-icon="icon: settings" title="Settings" data-uk-tooltip></a></li>
-                        <li><a href="#" data-uk-icon="icon:  sign-out" title="Sign Out" data-uk-tooltip></a></li>
+                        <li><a href="/logout" data-uk-icon="icon:  sign-out" title="Sign Out" data-uk-tooltip></a></li>
                         <li><a class="uk-navbar-toggle" data-uk-toggle data-uk-navbar-toggle-icon href="#offcanvas-nav"
                                 title="Offcanvas" data-uk-tooltip></a></li>
                     </ul>
@@ -98,24 +100,7 @@
             </h4>
 
             <div class="uk-position-relative uk-text-center uk-display-block">
-                <?php if ($user->account < USR_ADMIN) : ?>
-                <a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center"
-                    data-uk-icon="icon: triangle-down; ratio: 0.7">Registered User</a>
-                <!-- user dropdown -->
-                <div class="uk-dropdown user-drop"
-                    data-uk-dropdown="mode: click; pos: bottom-center; animation: uk-animation-slide-bottom-small; duration: 150">
-                    <ul class="uk-nav uk-dropdown-nav uk-text-left">
-                        <li><a href="javascript:deleteAccount();"><span data-uk-icon="icon: warning"></span> Delete
-                                Account</a></li>
-                        <li><a href="/logout"><span data-uk-icon="icon: sign-out"></span>
-                                <?= $_['logout'] ?>
-                            </a></li>
-                    </ul>
-                </div>
-                <!-- /user dropdown -->
-                <?php else : ?>
-                <span class="uk-text-small uk-text-muted uk-display-block uk-text-center">Admin</span>
-                <?php endif ?>
+                <p href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center"><?= $user->account < USR_ADMIN ? 'Registered User' : 'Admin' ?></p>
             </div>
         </div>
 
@@ -184,7 +169,7 @@
                 </li>
 
                 <li>
-                    <a href="#" class="uk-icon-link" data-uk-tooltip="Sign out" data-uk-icon="icon: sign-out"></a>
+                    <a href="/logout" class="uk-icon-link" data-uk-tooltip="Sign out" data-uk-icon="icon: sign-out"></a>
                 </li>
             </ul>
         </div>
